Add mnemonics to Open and Open in New Window to reuse old translations.
2007-03-15  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-places-sidebar.c:
        (bookmarks_build_popup_menu):
	Add mnemonics to Open and Open in New Window to reuse
	old translations.


svn path=/trunk/; revision=12808

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-03-15  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-places-sidebar.c:
+        (bookmarks_build_popup_menu):
+	Add mnemonics to Open and Open in New Window to reuse
+	old translations.
+
 2007-03-14  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-places-sidebar.c:
