Updated Japanese translation.
2007-03-17  Takeshi AIHANA <takehsi.aihana@gmail.com>

        * ja.po: Updated Japanese translation.

svn path=/trunk/; revision=12813

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-17  Takeshi AIHANA <takehsi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2007-03-16  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
