--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-17  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Fix and update in Brazilian Portuguese translation.
+
 2007-03-17  Takeshi AIHANA <takehsi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
