Updated French translation.
2007-03-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation.

svn path=/trunk/; revision=12815

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation.
+
 2007-03-17  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Fix and update in Brazilian Portuguese translation.
