--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-places-sidebar.c:
+	Revert previous checkin since it broke the freeze.
+
 2007-03-15  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-places-sidebar.c:
