--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump version to 2.19.1
+	Gnome 2.18 work continues on gnome-2-18 branch
+	
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-places-sidebar.c:
 	Revert previous checkin since it broke the freeze.
 
