--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-places-sidebar.c: 
+	Update icons on theme change (#416806)
+	Patch from Stefano Teso
+
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-history-sidebar.c:
         (nautilus_history_sidebar_class_init):
         (nautilus_history_sidebar_style_set):
