Remove unused metadata key NAUTILUS_METADATA_KEY_NOTES and code related to
2007-03-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-metadata.h:
        * src/nautilus-sidebar-title.c:
	Remove unused metadata key NAUTILUS_METADATA_KEY_NOTES and
	code related to it.


svn path=/trunk/; revision=12825

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-metadata.h:
+        * src/nautilus-sidebar-title.c:
+	Remove unused metadata key NAUTILUS_METADATA_KEY_NOTES and
+	code related to it.
+
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-places-sidebar.c: 
 	Update icons on theme change (#416806)
 	Patch from Stefano Teso
