Make default icon sizes match xdg icon sizes better (#347168) Patch from
2007-03-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.h:
	Make default icon sizes match xdg icon sizes better (#347168)
	Patch from Christian Neumair



svn path=/trunk/; revision=12826

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-factory.h:
+	Make default icon sizes match xdg icon sizes better (#347168)
+	Patch from Christian Neumair
+
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-metadata.h:
         * src/nautilus-sidebar-title.c:
 	Remove unused metadata key NAUTILUS_METADATA_KEY_NOTES and
