--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-19  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation from Espen
+	Stefansen.
+
 2007-03-18  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
