--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_file_emit_changed):
+	Avoid recursion when updating symlinks (#418771)
+
+2007-03-19  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-icon-factory.h:
 	Make default icon sizes match xdg icon sizes better (#347168)
 	Patch from Christian Neumair
