--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-29  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c (create_and_set_up_tree_view):
+	Bump default name column width to 32 (#410361)
+
 2007-03-28  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-window-manage-views.c:
