--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-29  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c (create_and_set_up_tree_view):
+	Bump default name column width to 32 (#410361)
+
 2007-03-19  Alexander Larsson  <alexl@redhat.com>
   
 	* libnautilus-private/nautilus-file.c (nautilus_file_emit_changed):
