Updated Spanish translation by Jorge González.
2007-03-29  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

        * es.po: Updated Spanish translation by Jorge González.


svn path=/branches/gnome-2-18/; revision=12838

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-29  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
+
+	* es.po: Updated Spanish translation by Jorge González.
+
 2007-03-26  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gl.po: Updated Galician Translation.
