Add trash to sidebar places. Patch from Stefano Teso
2007-03-30  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-places-sidebar.c:
	Add trash to sidebar places.
	Patch from Stefano Teso


svn path=/trunk/; revision=12839

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-30  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-places-sidebar.c:
+	Add trash to sidebar places.
+	Patch from Stefano Teso
+
 2007-03-29  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c (create_and_set_up_tree_view):
