--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-31  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2007-03-29  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
 
 	* es.po: Updated Spanish translation by Jorge González.
