svn path=/branches/gnome-2-18/; revision=12841
svn path=/branches/gnome-2-18/; revision=12841

--- a/po/eu.po
+++ b/po/eu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-31 19:01+0200\n"
-"PO-Revision-Date: 2007-03-31 19:13+0200\n"
+"PO-Revision-Date: 2007-03-31 19:15+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -6175,7 +6175,7 @@ msgstr "CD/_DVD sortzailea"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:677
 msgid "Open a folder into which you can drag files to burn to a CD or DVD"
-msgstr "Ireki karpeta bertara fitxategiak arratatzeko eta CDa edo DVDa grabatzeko"
+msgstr "Ireki karpeta bertara fitxategiak arrastatzeko eta CDa edo DVDa grabatzeko"
 
 #
 #: ../src/nautilus-window-menus.c:703
