Updated the Czech translation.
2007-04-02  Jakub Friedl  <jfriedl@suse.cz>

  * cs.po: Updated the Czech translation.


svn path=/trunk/; revision=12843

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-02  Jakub Friedl  <jfriedl@suse.cz>
+
+	* cs.po: Updated the Czech translation.
+
 2007-03-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation from Espen
@@ -8,8 +12,8 @@
 	* sv.po: Updated Swedish translation.
 
 2007-03-17  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-03-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
