--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-04  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2007-04-02  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated the Czech translation.
