--- a/po/sv.po
+++ b/po/sv.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-16 03:29+0000\n"
-"PO-Revision-Date: 2007-03-18 21:21+0100\n"
+"PO-Revision-Date: 2007-04-04 22:19+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -1217,7 +1217,7 @@ msgstr "_Ersätt"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1233
 msgid "S_kip All"
-msgstr "_Hoppa över alla"
+msgstr "H_oppa över alla"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1233
 msgid "Replace _All"
