Fixes in Brazilian Portuguse translation.
2007-04-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Fixes in Brazilian Portuguse translation.

svn path=/branches/gnome-2-18/; revision=12845

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Fixes in Brazilian Portuguse translation.
+
 2007-04-02  Pema Geyleg <pema.geyleg@gmail.com>
 
 	* dz.po: Updated dzongkha translation
