Fixes in Brazilian Portuguese translation. Originally sent to branch
2007-04-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Fixes in Brazilian Portuguese translation. Originally sent
	to branch gnome-2-18.

svn path=/trunk/; revision=12846

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Fixes in Brazilian Portuguese translation. Originally sent
+	to branch gnome-2-18.
+
 2007-04-04  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
