Updated Galician Translation
svn path=/branches/gnome-2-18/; revision=12847

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-08  Ignacio Casal Quinteiro  <icq@cvs.gnome.org>
+
+	* gl.po: Updated Galician Translation.
+
 2007-04-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Fixes in Brazilian Portuguse translation.
