Update for release
2007-04-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/branches/gnome-2-18/; revision=12849

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.18.1 are:
+* Some crash fixes
+* Bump default name column width to 32 chars
+
 Major changes in 2.18.0.1 are:
 * Reverted accidental commit
 
