--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-10  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2007-03-29  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c (create_and_set_up_tree_view):
