sv.po: Updated Swedish translation
svn path=/trunk/; revision=12852

--- a/po/sv.po
+++ b/po/sv.po
@@ -2211,7 +2211,7 @@ msgstr "Gör om redigeringen"
 #: ../nautilus-computer.desktop.in.in.h:1
 #: ../src/nautilus-window-menus.c:661
 msgid "Browse all local and remote disks and folders accessible from this computer"
-msgstr "Bläddra bland lokala och fjärrdiskar och mappar som är åtkomliga från den här datorn"
+msgstr "Bläddra bland lokala och fjärrdiskar samt mappar som är åtkomliga från den här datorn"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
 msgid "Change the behaviour and appearance of file manager windows"
