sv.po: Updated Swedish translation
svn path=/branches/gnome-2-18/; revision=12853

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-10  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 === nautilus 2.18.1 ===
 	
 2007-04-08  Ignacio Casal Quinteiro  <icq@cvs.gnome.org>
