--- a/po/sv.po
+++ b/po/sv.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-16 03:29+0000\n"
-"PO-Revision-Date: 2007-03-18 21:21+0100\n"
+"PO-Revision-Date: 2007-04-10 21:31+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -2211,7 +2211,7 @@ msgstr "Gör om redigeringen"
 #: ../nautilus-computer.desktop.in.in.h:1
 #: ../src/nautilus-window-menus.c:661
 msgid "Browse all local and remote disks and folders accessible from this computer"
-msgstr "Bläddra bland lokala och fjärrdiskar och mappar som är åtkomliga från den här datorn"
+msgstr "Bläddra bland lokala och fjärrdiskar samt mappar som är åtkomliga från den här datorn"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
 msgid "Change the behaviour and appearance of file manager windows"
