Fix memleak (#427942) patch from Matthias Clasen
2007-04-11  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
        (file_and_directory_list_free):
	Fix memleak (#427942)
	patch from Matthias Clasen


svn path=/branches/gnome-2-18/; revision=12857

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-04-11  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+        (file_and_directory_list_free):
+	Fix memleak (#427942)
+	patch from Matthias Clasen
+
 2007-04-10  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
