Added support for a thumbnail icon size prefs (#424127)
2007-04-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        * libnautilus-private/nautilus-global-preferences.c:
        * libnautilus-private/nautilus-global-preferences.h:
        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-thumbnails.c:
	Added support for a thumbnail icon size prefs (#424127)


svn path=/trunk/; revision=12858

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-04-12  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/apps_nautilus_preferences.schemas.in:
+        * libnautilus-private/nautilus-global-preferences.c:
+        * libnautilus-private/nautilus-global-preferences.h:
+        * libnautilus-private/nautilus-icon-factory.c:
+        * libnautilus-private/nautilus-thumbnails.c:
+	Added support for a thumbnail icon size prefs (#424127)
+
 2007-04-11  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-directory-view.c:
