Add url in about dialog and update copyright year. Patch from Jaap A.
2007-04-12  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-window-menus.c:
        (action_about_nautilus_callback):
	Add url in about dialog and update copyright year.
	Patch from Jaap A. Haitsma


svn path=/trunk/; revision=12860

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-04-12  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-window-menus.c:
+        (action_about_nautilus_callback):
+	Add url in about dialog and update copyright year.
+	Patch from Jaap A. Haitsma
+
+2007-04-12  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory-async.c:
 	Limit number of calls to is_needy() (#320282)
 	Based on patch from Aivars Kalvans   
