--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-13  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-thumbnails.c:
+	Avoid searching possibly long lists of thumbnails.
+	Based on patch from Iain
+
 2007-04-12  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-window-menus.c:
