sv.po: Updated Swedish translation
svn path=/trunk/; revision=12862

--- a/po/sv.po
+++ b/po/sv.po
@@ -4327,7 +4327,7 @@ msgstr "Inställningar för filhantering"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
-msgstr "_Inkludera ett kommando Ta bort som förbigår papperskorgen"
+msgstr "Ink_ludera kommandot Ta bort som förbigår papperskorgen"
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid ""
