--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-14  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Youssef Chahibi.
+
 2007-04-13  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
