--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-15  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* oc.po: Added Occitan translation from
+	Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay>.
+	* LINGUAS: Added "oc".
+
 2007-04-13  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
