--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-15  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* oc.po: Added Occitan translation from
+	Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay>.
+	* LINGUAS: Added "oc".
+
 2007-04-14  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Youssef Chahibi.
