--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-16  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-thumbnails.c:
+	Work with glib < 2.13.0
+
 2007-04-13  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-thumbnails.c:
