--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-18  Subhransu Behera  <arya_subhransu@yahoo.co.in>
+
+	* or.po: Updated Oriya Translation.
+
 2007-04-15  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* oc.po: Added Occitan translation from
