--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Changed shortcut by Jonathan Ernst.
+
 2007-04-15  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* oc.po: Added Occitan translation from
