--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-21  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2007-04-15  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* oc.po: Added Occitan translation from
