Add disk usage pie chart (#410658) Based on patch from Trevor Davenport
2007-05-02  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        * src/file-manager/fm-properties-window.c:
	Add disk usage pie chart (#410658)
	Based on patch from Trevor Davenport


svn path=/trunk/; revision=12877

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-05-02  Alexander Larsson  <alexl@redhat.com>
+
+        * configure.in:
+        * src/file-manager/fm-properties-window.c:
+	Add disk usage pie chart (#410658)
+	Based on patch from Trevor Davenport
+
 2007-04-16  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-thumbnails.c:
