--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-06  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file.c: (modify_link_hash_table):
+	Don't leak original hash key.
+
 2007-05-02  Alexander Larsson  <alexl@redhat.com>
 
         * configure.in:
