Avoid displaying file size if none exists (#390055) Patch from Ed Catmur
2007-05-09  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Avoid displaying file size if none exists (#390055)
	Patch from Ed Catmur


svn path=/trunk/; revision=12884

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-09  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+	Avoid displaying file size if none exists (#390055)
+	Patch from Ed Catmur
+
 2007-05-06  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c: (modify_link_hash_table):
