Updated Bulgarian translation by Alexander Shopov <ash@contact.bg>
2007-05-12  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Alexander Shopov <ash@contact.bg>

svn path=/branches/gnome-2-18/; revision=12886

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-12  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2007-04-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Changed shortcut by Jonathan Ernst.
