--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Major changes in 2.19.2 are:
+* Fix crashes and leaks
+* Add open in place sidebar context menu
+* Make default icon sizes match xdg icon sizes better
+* Fix hang with recursive symlinks
+* Make name column wider
+* Add trash to places sidebar
+* Support for thumbnail icon size preference
+* Disk free pie chart in properties dialog
+
 Major changes in 2.18.0.1 are:
 * Reverted accidental commit
 
