--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-05-14  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	* configure.in: 
+	Bump to 2.19.2
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	* libnautilus-private/nautilus-icon-container.c:
+	Fix up checks
+	
 2007-05-09  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-directory-view.c:
