Post release version bump
2007-05-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump


svn path=/trunk/; revision=12890

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-05-14  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.19.2 ===
+	
+2007-05-14  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS: 
 	* configure.in: 
 	Bump to 2.19.2
