--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-14  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 === nautilus 2.19.2 ===
 	
 2007-05-12  Alexander Shopov  <ash@contact.bg>
