Add support for xdg-user-dirs
2007-05-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-signaller.c:
        * src/file-manager/fm-directory-view.c:
	Add support for xdg-user-dirs


svn path=/trunk/; revision=12893

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-05-16  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-utilities.[ch]:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-signaller.c:
+        * src/file-manager/fm-directory-view.c:
+	Add support for xdg-user-dirs
+
 2007-05-14  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
