Handle alpha in draw_frame
2007-05-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
	Handle alpha in draw_frame



svn path=/trunk/; revision=12896

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-22  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-canvas-item.c:
+	Handle alpha in draw_frame
+
 2007-05-16  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-utilities.[ch]:
