Don't show in menu editor
2007-05-23  Alexander Larsson  <alexl@redhat.com>

        * nautilus-folder-handler.desktop.in.in:
	Don't show in menu editor


svn path=/trunk/; revision=12898

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-23  Alexander Larsson  <alexl@redhat.com>
+
+        * nautilus-folder-handler.desktop.in.in:
+	Don't show in menu editor
+	
 2007-05-22  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-icon-canvas-item.c:
