Fix build in some cases
2007-05-23  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	Fix build in some cases


svn path=/trunk/; revision=12899

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-23  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-properties-window.c:
+	Fix build in some cases
+
+2007-05-23  Alexander Larsson  <alexl@redhat.com>
+
         * nautilus-folder-handler.desktop.in.in:
 	Don't show in menu editor
 	
