Tango compliant thumbnail frame (#440221) Icon from David Prieto
2007-05-23  Alexander Larsson  <alexl@redhat.com>

	* icons/thumbnail_frame.png:
	Tango compliant thumbnail frame (#440221)
	Icon from David Prieto


svn path=/trunk/; revision=12900

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-05-23  Alexander Larsson  <alexl@redhat.com>
 
+	* icons/thumbnail_frame.png:
+	Tango compliant thumbnail frame (#440221)
+	Icon from David Prieto
+	
+2007-05-23  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-properties-window.c:
 	Fix build in some cases
 
