--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-28  Ihar Hrachyshka <iharh@gnome.org>
+
+	* be@latin.po: Added Belarusian Latin translation by Ales Navicki.
+
 2007-05-12  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
