--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-28  Ihar Hrachyshka <iharh@gnome.org>
+
+	* be@latin.po: Added Belarusian Latin translation by Ales Navicki.
+
 2007-05-18  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.
