--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-29  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, by
+	         Daniel Schindler <daniel@logic-co.de>
+
 2007-05-28  Ihar Hrachyshka <iharh@gnome.org>
 
 	* be@latin.po: Added Belarusian Latin translation by Ales Navicki.
