--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-31  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.
+
 2007-05-29  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, by
