Updated Bulgarian translation by Alexander Shopov <ash@contact.bg>
2007-06-02  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Alexander Shopov <ash@contact.bg>

svn path=/trunk/; revision=12906

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-02  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2007-05-31  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.
