--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.19.3 are:
+* Added support for xdg-user-dirs
+* A11y fix in the file properties dialog
+* Build fix
+* Don't show folder handler in menu editor
+* Added alpha support for icon frames
+* Updated thumbnail frame
+
 Major changes in 2.19.2 are:
 * Fix crashes and leaks
 * Add open in place sidebar context menu
