--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.19.3 ===
+
+2007-06-05  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2007-06-04  Willie Walker <william.walker@sun.com>
 
         * src/nautilus-file-management-properties.glade:
