--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-05  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump
+
 === nautilus 2.19.3 ===
 
 2007-06-05  Martin Wehner  <martin.wehner@gmail.com>
