--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-05  Subhransu Behera  <arya_subhransu@yahoo.co.in>
+
+	* or.po: Updated Oriya Translation.
+
 2007-06-02  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
