--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-file-management-properties.glade:
+	Replace the "atkrelation" declarations with
+	"mnemonic_widget" properties (#437340)
+
 2007-06-05  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
