Replace the "atkrelation" declarations with "mnemonic_widget" properties
2007-06-10  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-file-management-properties.glade:
	Replace the "atkrelation" declarations with
	"mnemonic_widget" properties (#437340)

svn path=/branches/gnome-2-18/; revision=12916

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-file-management-properties.glade:
+	Replace the "atkrelation" declarations with
+	"mnemonic_widget" properties (#437340)
+
 2007-05-22  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-icon-canvas-item.c:
