--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-10  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2007-06-06  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
 	* or.po: Updated Oriya Translation.
