Don't leak item text and remove stale comment.
2007-06-12  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-zoom-control.c: (create_zoom_menu_item):
	Don't leak item text and remove stale comment.

svn path=/branches/gnome-2-18/; revision=12920

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-12  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-zoom-control.c: (create_zoom_menu_item):
+	Don't leak item text and remove stale comment.
+
 2007-06-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-file-management-properties.glade:
