--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-12  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Fixed typo reported by Noritada KOBAYASHI.
+
 2007-06-02  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
