Position the zoom popup menu under the control itself, not where the mouse
2007-06-13  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-zoom-control.c: (zoom_popup_menu_show):
	Position the zoom popup menu under the control itself,
	not where the mouse cursor happens to be. (#446682)
	Patch from Christian Persch <chpe@gnome.org>

svn path=/trunk/; revision=12922

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-13  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-zoom-control.c: (zoom_popup_menu_show):
+	Position the zoom popup menu under the control itself,
+	not where the mouse cursor happens to be. (#446682)
+	Patch from Christian Persch <chpe@gnome.org>
+
 2007-06-12  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-zoom-control.c: (create_zoom_menu_item):
